# punyo_force_estimation

./: .gitignore  README.md  estimate_force.py  pyproject.toml  read_pressure.py  requirements.txt  visualize.py
demo/: estimate.py  explode_data.py  generate_mesh.py  plot_pressure.py
demo/0/: data.json
demo/0/expand/: pc_0.npy  pc_1.npy  pc_10.npy  pc_100.npy  pc_101.npy  pc_102.npy  pc_103.npy  pc_104.npy  pc_105.npy  pc_106.npy  pc_107.npy  pc_108.npy  pc_109.npy  pc_11.npy  pc_110.npy  pc_111.npy  pc_112.npy  pc_113.npy  pc_114.npy  pc_115.npy  pc_116.npy  pc_117.npy  pc_118.npy  pc_119.npy  pc_12.npy  pc_120.npy  pc_121.npy  pc_122.npy  pc_123.npy  pc_124.npy  pc_125.npy  pc_126.npy  pc_127.npy  pc_128.npy  pc_129.npy  pc_13.npy  pc_130.npy  pc_131.npy  pc_132.npy  pc_133.npy  (+401 more)
src/punyo_force_estimation/: ellipse_mesh.py  extract_bad_points.py  generate_initial_mesh.py  guess_force.py  pipeline.py  sim_frames.py  utils.py
src/punyo_force_estimation/force_module/: __init__.py  deformation_estimator.py  force_from_punyo.py  force_predictor.py  force_predictor_custom.py  forward_model.py  material_model.py
src/punyo_force_estimation/ref_data/: domed_unequal.vtk  equalized.vtk  flat.vtk  point_err_mean.npy  point_stdevs.npy  triangle_force.npy
src/punyo_force_estimation/vis_utils/: cv_player.py  cv_utils.py
tests/: test_A.py  test_K.py  test_raw_force.py  test_simulation.py  test_single_triangle.py  test_vsf_sim.py  texture_mesh.py  visualize_K.py
